--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
 	"scripts": {
 		"build": "nest build",
 		"format": "prettier --write \"**/*.{ts,js,json,html,scss,css,md}\"",
-		"start": "nest start",
-		"start:dev": "nest start --watch",
-		"start:debug": "nest start --debug --watch",
-		"start:prod": "node dist/main",
+		"start": "cross-env NODE_ENV=production nest start",
+		"start:dev": "cross-env NODE_ENV=development nest start --watch",
+		"start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
+		"start:prod": "cross-env NODE_ENV=production node dist/src/main",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-		"test": "jest",
-		"test:watch": "jest --watch",
-		"test:cov": "jest --coverage",
+		"test": "cross-env NODE_ENV=test jest",
+		"test:watch": "cross-env NODE_ENV=test jest --watch",
+		"test:cov": "cross-env NODE_ENV=test jest --coverage",
 		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-		"test:e2e": "jest --config ./test/jest-e2e.json",
+		"test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json",
+		"typeorm": "typeorm-ts-node-commonjs",
+		"migrate:generate": "npm run typeorm migration:generate -- -n InitSchema",
+		"migrate:run": "npm run typeorm migration:run",
+		"migrate:revert": "npm run typeorm migration:revert",
 		"prepare": "husky"
 	},
 	"lint-staged": {
@@ -36,11 +40,13 @@
 		"@nestjs/swagger": "^11.2.0",
 		"@nestjs/terminus": "^11.0.0",
 		"@nestjs/throttler": "^6.4.0",
+		"@nestjs/typeorm": "^11.0.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.2",
 		"helmet": "^8.1.0",
 		"reflect-metadata": "^0.2.2",
-		"rxjs": "^7.8.2"
+		"rxjs": "^7.8.2",
+		"typeorm": "^0.3.25"
 	},
 	"devDependencies": {
 		"@nestjs/cli": "^11.0.9",
@@ -52,6 +58,7 @@
 		"@types/supertest": "^6.0.3",
 		"@typescript-eslint/eslint-plugin": "^8.38.0",
 		"@typescript-eslint/parser": "^8.38.0",
+		"cross-env": "^10.0.0",
 		"eslint": "^9.32.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-prettier": "^5.5.3",
