--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
 		"test:cov": "cross-env NODE_ENV=test jest --coverage",
 		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
 		"test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json",
-		"typeorm": "typeorm-ts-node-commonjs",
-		"migrate:generate": "npm run typeorm migration:generate -- -n InitSchema",
-		"migrate:run": "npm run typeorm migration:run",
-		"migrate:revert": "npm run typeorm migration:revert",
+		"typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli",
+		"migration:generate": "npm run typeorm -- --dataSource=src/database/data-source.ts migration:generate",
+		"migration:run": "npm run typeorm -- --dataSource=src/database/data-source.ts migration:run",
+		"migration:revert": "npm run typeorm -- --dataSource=src/database/data-source.ts migration:revert",
+		"migration:create": "npm run typeorm -- --dataSource=src/database/data-source.ts migration:create",
+		"migration:show": "npm run typeorm -- --dataSource=src/database/data-source.ts migration:show",
 		"prepare": "husky"
 	},
 	"lint-staged": {
@@ -44,13 +46,14 @@
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.2",
 		"helmet": "^8.1.0",
+		"pg": "^8.16.3",
 		"reflect-metadata": "^0.2.2",
 		"rxjs": "^7.8.2",
 		"typeorm": "^0.3.25"
 	},
 	"devDependencies": {
-		"@nestjs/cli": "^11.0.9",
-		"@nestjs/schematics": "^11.0.6",
+		"@nestjs/cli": "^11.0.10",
+		"@nestjs/schematics": "^11.0.7",
 		"@nestjs/testing": "^11.1.5",
 		"@types/express": "^5.0.3",
 		"@types/jest": "^30.0.0",
@@ -72,6 +75,7 @@
 		"ts-loader": "^9.5.2",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
+		"typeorm-ts-node-commonjs": "^0.3.20",
 		"typescript": "^5.8.3"
 	},
 	"jest": {
