--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"description": "A library API built with NestJS",
 	"author": "Abdelrahman Bayoumi",
 	"private": true,
-	"license": "UNLICENSED",
+	"license": "MIT",
 	"scripts": {
+		"prepare": "husky",
 		"build": "nest build",
 		"format": "prettier --write \"**/*.{ts,js,json,html,scss,css,md}\"",
 		"start": "cross-env NODE_ENV=production nest start",
@@ -23,8 +24,7 @@
 		"migration:run": "npm run typeorm -- --dataSource=src/database/data-source.ts migration:run",
 		"migration:revert": "npm run typeorm -- --dataSource=src/database/data-source.ts migration:revert",
 		"migration:create": "npm run typeorm -- --dataSource=src/database/data-source.ts migration:create",
-		"migration:show": "npm run typeorm -- --dataSource=src/database/data-source.ts migration:show",
-		"prepare": "husky"
+		"migration:show": "npm run typeorm -- --dataSource=src/database/data-source.ts migration:show"
 	},
 	"lint-staged": {
 		"*.{ts,js,json,html,scss,css,md}": [
