--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,13 @@
 # ====== App Config ======
-NODE_ENV = production # development
-PORT = 3000
+NODE_ENV=production # development
+PORT=3000
 
 # ====== Database Config ======
-DATABASE_URL = postgres://username:password@localhost:5432/library
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=root
+DATABASE_NAME=library
+DATABASE_SSL=false
+
 
